# tatoo

api/: .gitignore  Cargo.toml  diesel.toml  docker-compose.yml  package-lock.json
api/.github/workflows/: lint.yml
api/migrations/2025-05-27-220131_users/: up.sql
api/migrations/2025-05-27-220741_place/: down.sql  up.sql
api/migrations/2025-05-27-221502_appointment/: down.sql  up.sql
api/src/: lib.rs  main.rs
api/src/app/: mod.rs
api/src/app/appointment/: mod.rs
api/src/app/appointment/domain/entities/: appointment.rs  mod.rs  new_appointment.rs
api/src/app/appointment/http/: appointment_controller.rs  mod.rs
api/src/app/appointment/infra/repositories/: appointment_repository.rs  mod.rs
api/src/app/appointment/usecases/: make_appointment.rs  mod.rs
api/src/app/auth/: mod.rs
api/src/app/auth/domain/entities/: jwt_payload.rs  mod.rs
api/src/app/auth/http/: auth_controller.rs  mod.rs
api/src/app/auth/http/dto/: login_dto.rs  login_response_dto.rs  mod.rs
api/src/app/auth/http/middlewares/: auth_middleware.rs
api/src/app/auth/strategies/: jwt.rs
api/src/app/auth/usecases/: login_usecase.rs
api/src/app/place/domain/entities/: place.rs
api/src/app/place/http/: mod.rs  place_controller.rs
api/src/app/place/http/dto/: mod.rs  (+1 more)
api/src/app/place/usecases/: get_place_info.rs  get_places_list.rs  mod.rs
api/src/app/user/: mod.rs
api/src/common/: usecase.rs
api/src/domain/: error.rs
api/src/domain/entities/: place.rs  user.rs
api/src/helpers/: pagination.rs
api/src/infra/: config.rs
api/src/infra/db/: conn.rs  mod.rs  schema.rs
(+11 files in other folders)
