[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = {version = "0.4.41", features = ['serde']} 
cookie = "0.18.1"
diesel = {version =  "2.2.10", features = ["mysql", "r2d2" , "chrono"]}
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio =  {version = "1.45.1", features = ["full"]}
